funcional recuperar pass, registro user, obtencion lote, obtencion arboles y detalle del arbol

--- a/src/app/components/recover-password/recover-password.component.html
+++ b/src/app/components/recover-password/recover-password.component.html
@@ -23,7 +23,7 @@
                     <i class="fas fa-envelope"></i> 
                     Ingrese su Correo
                 </label>
-                <input type="email" style="background-color: white; " class="form-control" id="correo" #correo aria-describedby="emailHelp" placeholder="juan@gmail.com">
+                <input type="email" style="background-color: white; " class="form-control" id="correo" #correo aria-describedby="emailHelp" placeholder="juan@gmail.com" >
             </div>
             <div class="form-group">
                 <label for="password" style="color: rgb(0, 0, 0); margin-top: 10px;">
@@ -55,7 +55,7 @@
             </div>
             
             <div class="row">
-                <button style="background: #f63105;" class="col btn-1 btn btn-primary">Cambiar Contraseña</button>
+                <button (click)="recuperarPass(correo.value,contrasena.value)" style="background: #f63105;" class="col btn-1 btn btn-primary">Cambiar Contraseña</button>
             </div>
            
 
