--- a/src/app/components/arbol-list/arbol-list.component.html
+++ b/src/app/components/arbol-list/arbol-list.component.html
@@ -8,7 +8,7 @@
                 <!-- Icono de flecha hacia atrás -->
             </a>
         </div>
-        <h1 class="mx-auto" style="font-size: 15px;">LOTE NO. 23892</h1>
+        <h1 class="mx-auto" style="font-size: 15px;">LOTE NO. {{LoteIdentificadorId}}</h1>
         <div class="logo-circle">
             <img src="/assets/img/logo.png" alt="logo" class="logo-img">
         </div>
@@ -40,17 +40,13 @@
                 <div class="lote-card">
                     
                     <img [src]="lote.ImagenArbol" alt="Foto del Árbol" width="30px" height="30px6">
-                    <p class="identificador">
-                        Identificador:     
-                        <span class="color-circle" [ngClass]="lote.color"></span>
-                    </p>
-                    <p>Número de Árbol: {{ lote.numeroArbol }}</p>
-                    <p>Empleado: {{ lote.Empleado }}</p>
+                    <p>Número de Árbol: {{ lote.IdArbol }}</p>
+                    <p>Empleado Creador: {{ lote.Empleado }}</p>
                     
                     <button class="btn btn-primary" ><i class="fas fa-edit"></i></button>
                     <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
-                    <button class="btn btn-dark" routerLink="/statusArbol" ><i class="fas fa-eye"></i></button>
-                    <button class="btn btn-warning" routerLink="/statusArbol" ><i class="fas fa-file-medical"></i></button>
+                    <button class="btn btn-dark" (click)="viewStatusArbol(lote.IdArbol)" ><i class="fas fa-eye"></i></button>
+                    <button class="btn btn-warning" (click)="viewStatusArbol(lote.IdArbol)" ><i class="fas fa-file-medical"></i></button>
                     <button class="btn btn-success" routerLink="/controlArbol" ><i class="fas fa-plus-circle"></i></button>
 
                 </div>
