--- a/src/app/components/recover-password/recover-password.component.html
+++ b/src/app/components/recover-password/recover-password.component.html
@@ -5,7 +5,7 @@
     <br>
     <div class="back-link">
         <a routerLink="/ruta-de-regreso">
-            <i class="fas fa-arrow-left" style="color: black;"></i> <!-- Icono de flecha hacia atrás -->
+            <i class="fas fa-arrow-left" style="color: rgb(255, 255, 255);"></i> <!-- Icono de flecha hacia atrás -->
         </a>
     </div>
     <div class="lunaLogo">
