--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -39,7 +39,7 @@
                 <label for="email" style="color: rgb(0, 0, 0); margin-top: 10px;">
                     Ingrese su DPI
                 </label>
-                <input type="text" style="background-color: white; " class="form-control" id="dpi" required #dpi pattern="^\d{4}-\d{5}-\d{4}$"></div>
+                <input type="text" style="background-color: white; " class="form-control" id="dpi" maxlength="13" required #dpi pattern="^\d{4}-\d{5}-\d{4}$" placeholder="3430555552212"></div>
                 
             <div class="form-group">
                 <label for="email" style="color: rgb(0, 0, 0); margin-top: 10px;">
