--- a/src/app/components/arbol-list/arbol-list.component.html
+++ b/src/app/components/arbol-list/arbol-list.component.html
@@ -8,7 +8,7 @@
                 <!-- Icono de flecha hacia atrás -->
             </a>
         </div>
-        <h1 class="mx-auto" style="font-size: 15px;">LOTE NO. {{LoteIdentificadorId}}</h1>
+        <h1 class="mx-auto" style="font-size: 15px;">LOTE. {{LoteIdentificadorId}}</h1>
         <div class="logo-circle">
             <img src="/assets/img/logo.png" alt="logo" class="logo-img">
         </div>
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col text-center">
-                <button class="button" routerLink="/newArbol">
+                <button class="button"  (click)="viewNuevoArbol()" >
                     <div class="icon-circle"><mat-icon style="color: green;" >add</mat-icon></div>
                     Agregar Árbol
                   </button>
@@ -41,13 +41,14 @@
                     
                     <img [src]="lote.ImagenArbol" alt="Foto del Árbol" width="30px" height="30px6">
                     <p>Número de Árbol: {{ lote.IdArbol }}</p>
+                    <p>Número de Identi: {{ lote.IdentificadorArbol }}</p>
                     <p>Empleado Creador: {{ lote.Empleado }}</p>
                     
-                    <button class="btn btn-primary" ><i class="fas fa-edit"></i></button>
-                    <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                    <button class="btn btn-primary" (click)="viewEditarArbol(lote.IdArbol)"><i class="fas fa-edit"></i></button>
+                    <button class="btn btn-danger" ><i class="fas fa-trash-alt"></i></button>
                     <button class="btn btn-dark" (click)="viewStatusArbol(lote.IdArbol)" ><i class="fas fa-eye"></i></button>
                     <button class="btn btn-warning" (click)="viewStatusArbol(lote.IdArbol)" ><i class="fas fa-file-medical"></i></button>
-                    <button class="btn btn-success" routerLink="/controlArbol" ><i class="fas fa-plus-circle"></i></button>
+                    <button class="btn btn-success" (click)="viewControlArbol(lote.IdArbol)" ><i class="fas fa-plus-circle"></i></button>
 
                 </div>
             </div>
