--- a/src/app/components/view-arbol/view-arbol.component.css
+++ b/src/app/components/view-arbol/view-arbol.component.css
@@ -74,6 +74,9 @@ h1 {
     font-size: 24px;
     text-align: center;
     margin-top: 50px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
   }
 
 .row {
