--- a/src/app/components/quimicos-recomendados/quimicos-recomendados.component.html
+++ b/src/app/components/quimicos-recomendados/quimicos-recomendados.component.html
@@ -1,1 +1,79 @@
-<p>quimicos-recomendados works!</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+<nav class="navbar">
+    <div class="container-fluid">
+      <div class="back-link">
+        <a (click)="navigateListaArboles()">
+          <i class="fas fa-arrow-left" style="color: rgb(255, 255, 255);"></i>
+        </a>
+      </div>
+      <h1 class="mx-auto" style="font-size: 15px;">{{NombreFinca}}</h1>
+      <div class="logo-circle">
+        <img src="/assets/img/logo.png" alt="logo" class="logo-img">
+      </div>
+    </div>
+  </nav>
+
+  <div class="viewLote">
+    <h1  style="background-color: rgb(2, 121, 19); color: aliceblue;"class="descripcion">Plagas y Enfermedades</h1>
+
+    <form class="container">
+        <div style="text-align: center;">
+            <h1 style="background-color: rgb(190, 190, 190);" class="descripcion">Plagas</h1>
+            <img src="/assets/img/iconoPlagas.png" style="height: 80px; width: 80px; display: block; margin: 20px auto;">
+          </div>
+          
+        <div class="table-container"style="padding: 20px; overflow-y: auto; max-height: 300px;"> 
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Estación</th>
+                        <th>Plaga</th>
+                        <th>Cant. I</th>
+                        <th>Quimico R.</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let arbolPlaga of ArbolesPlaga">
+                        <td>{{ arbolPlaga.Estacion }}</td>
+                        <td>{{ arbolPlaga.Plaga }}</td>
+                        <td>{{ arbolPlaga.CantidadIndividuos }}</td>
+                        <td>{{ arbolPlaga.Quimico }}</td>
+                      </tr>
+                </tbody>
+            </table>
+        </div>
+    </form>
+
+    <form class="container">
+        <div >
+            <h1  style="background-color: rgb(190, 190, 190);"class="descripcion">Enfermedades</h1>
+            <img src="/assets/img/iconoEnfermedad.png"  style="height: 80px; width: 80px; display: block; margin: 20px auto;">
+
+        </div>
+        <div class="table-container"style="padding: 20px; overflow-y: auto; max-height: 300px;"> 
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Estación</th>
+                        <th>Enfermedad</th>
+                        <th>Cant. I</th>
+                        <th>Estructura D.</th>
+                        <th>Quimico R.</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let arbolEnfermedad of ArbolesEnfermedad">
+                        <td>{{ arbolEnfermedad.Estacion }}</td>
+                        <td>{{ arbolEnfermedad.Enfermedad }}</td>
+                        <td>{{ arbolEnfermedad.CantidadIndividuos }}</td>
+                        <td>{{ arbolEnfermedad.Estructura }}</td>
+                        <td>{{ arbolEnfermedad.Quimico }}</td>
+                      </tr>
+                </tbody>
+            </table>
+        </div>
+    </form>
+</div>
+
+
