inventario incremento productividad, visualizacion de plagas y enfermedades

--- a/src/app/components/quimicos-recomendados/quimicos-recomendados.component.html
+++ b/src/app/components/quimicos-recomendados/quimicos-recomendados.component.html
@@ -7,7 +7,7 @@
           <i class="fas fa-arrow-left" style="color: rgb(255, 255, 255);"></i>
         </a>
       </div>
-      <h1 class="mx-auto" style="font-size: 15px;">{{NombreFinca}}</h1>
+      <h1 class="mx-auto" style="font-size: 15px;">ÁRBOL: {{IdentificadorArbol}}</h1>
       <div class="logo-circle">
         <img src="/assets/img/logo.png" alt="logo" class="logo-img">
       </div>
@@ -15,7 +15,7 @@
   </nav>
 
   <div class="viewLote">
-    <h1  style="background-color: rgb(2, 121, 19); color: aliceblue;"class="descripcion">Plagas y Enfermedades</h1>
+    <h1  style="background-color: rgb(87, 182, 20); color: aliceblue; padding: 10px;"class="descripcion">Plagas y Enfermedades</h1>
 
     <form class="container">
         <div style="text-align: center;">
