--- a/src/app/components/report-control/report-control.component.html
+++ b/src/app/components/report-control/report-control.component.html
@@ -8,7 +8,7 @@
                 <!-- Icono de flecha hacia atrás -->
             </a>
         </div>
-        <h1 class="mx-auto" style="font-size: 15px;">FINCA LA BENDICIÓN JUTIAPA</h1>
+        <h1 class="mx-auto" style="font-size: 15px;">{{NombreFinca}}</h1>
         <div class="logo-circle">
             <img src="/assets/img/logo.png" alt="logo" class="logo-img">
         </div>
@@ -24,13 +24,12 @@
                   <img class="img-fluid mx-auto my-3" style="max-width: 100px; max-height: 100px;" src="/assets/img/controlAnalisis.png" alt="">
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Lotes   Creados Hoy: 31/08/2023</li>
-                    <li class="list-group-item">Árboles Creados Hoy: 31/08/2023</li>
+                    <li class="list-group-item">Lotes   Creados Hoy:2</li>
+                    <li class="list-group-item">Árboles Creados Hoy: 10</li>
                     <li class="list-group-item">Lotes Creados Ayer: 5</li>
-                    <li class="list-group-item">Árboles Creados Ayer: 31/08/2023</li>
-                    <li class="list-group-item">Cantidad Enfermedades Detectadas: 5</li>
-                    <li class="list-group-item">Latitud: 5.8551</li>
-                    <li class="list-group-item">Longitud: -9.15545</li>
+                    <li class="list-group-item">Árboles Creados Ayer: 20</li>
+                    <li class="list-group-item">Cantidad Enfermedades Detectadas: 250</li>
+                    <li class="list-group-item">Cantidad Plagas Detectadas: 110</li>
 
                   </ul>
                 </div>
