--- a/src/app/components/grafico-canvas/grafico-canvas.component.html
+++ b/src/app/components/grafico-canvas/grafico-canvas.component.html
@@ -1,1 +1,9 @@
-<h1>HOLA</h1>
+<div style="width: 70%;height:60%;">
+    <canvas
+    baseChart
+    [legend]="true"
+    [datasets]="chartData"
+    [labels]="chartLabels"
+    [options]="chartOptions">
+    </canvas>
+  </div>
